# PartDB-Niimprint

./: .gitignore  pyproject.toml
src/PrintPartDB/: gui.py  tools.py
src/PyPartDB/: __init__.py
